charts/grpc-vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: grpctest
  namespace: grpcserver
spec:
  sslConfig:
    secretRef:
      name: grpcserver-secret
      namespace: grpcserver
  virtualHost:
    routes:
      - matchers:
          - prefix: /
        routeAction:
          single:
            upstream:
              #name: grpcserver-grpcserver-svc-50005
              name: static-stream
              namespace: grpcserver
